Changes for 1.9

 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

Changes for 1.8.3

 - [ZBX-2367] improved using DISTINCT rule in queries in API (Aly) 
 - [ZBX-2408] fixed mute button in status of triggers page (Aly)
 - [ZBX-2477] fixed dynamic graphs disappear from screens (Vedmak)
 - [ZBX-1346] clarify some parameter values in the example configuration files (Richlv)
 - [ZBX-2471] fix location of the space in a translatable string (Richlv)
 - [ZBX-954] fix Hungarian language name (Richlv)
 - [ZBX-2457] change 'type' keyword to 'ENGINE' for table creation in MySQL schema (Richlv)
 - [ZBX-2466] fixed item filter form (Vedmak)
 - [ZBX-1607] now trigger line is visible in all Zabbix themes in all states and severity in corresponding severity colour mixed with opposite color which stored in defines in hex (Maxim Andruhovich / AM)
 - [ZBX-2105] fixed acknowledging events from dashboard for different nodes (Aly)
 - [ZBX-2441] fixed handling of begin/commit/rollback statements with temporarily unavailable SQL server (Sasha)
 - [ZBX-2432] fixed warning message in templates when template has linked templates (Maxim Andruhovich / AM)
 - [ZBX-2325] improved groups/hosts selecting for filter dropdowns (Vedmak)
 - [ZBX-2433] fixed time not updated on slides when now is selected (Vedmak)
 - [ZBX-2452] fixed parsing of integer values from SNMP's Hex-STRING (asaveljevs)
 - [ZBX-2313] forbid to add graph from templates to screen (Vedmak)
 - [ZBX-1503] added information message after host delete action, about host being deleted (Maxim Andruhovich / AM)
 - [ZBX-2418] fixed bug with JavaScript URL parser, anchor was recognized as part of file (Maxim Andruhovich / AM)
 - [ZBXNEXT-323] improved bad performance of the trends for large number of items (Sasha)